--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -313,7 +313,7 @@
   "yin-liang-0": "volume",
   "yin-liang-1": "volume-",
   "zhuang-tai-fan-hui": "status return",
-  "che-deng-kong-zhi": "car light control"
+  "che-deng-kong-zhi": "car light control",
   "dang-qian-che-su": "Current speed",
   "dang-wei": "gear",
   "dang-wei-gu-zhang": "gear failure",
