--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -313,7 +313,7 @@
   "yin-liang-0": "volume",
   "yin-liang-1": "volume-",
   "zhuang-tai-fan-hui": "retour de statut",
-  "che-deng-kong-zhi": "contrôle de l'éclairage de la voiture"
+  "che-deng-kong-zhi": "contrôle de l'éclairage de la voiture",
   "dang-qian-che-su": "Vitesse actuelle",
   "dang-wei": "engrenage",
   "dang-wei-gu-zhang": "panne d'engrenage",
