--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -313,7 +313,7 @@
   "shui-ping-su-du": "水平速度",
   "chui-zhi-su-du": "垂直速度",
   "quan-jing-kong-zhi": "全景控制",
-  "che-deng-kong-zhi": "车灯控制"
+  "che-deng-kong-zhi": "车灯控制",
   "zhi-dong-xi-tong-ying-jian-gu-zhang": "制动系统硬件故障",
   "zi-dong-jia-shi-zhi-dong-kong-zhi-xin-hao-zhuang-tai": "自动驾驶制动控制信号状态",
   "you-gu-zhang": "有故障",
