feat: 一体机底盘信息数据

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -361,5 +361,6 @@
   "dai-ji-mo-shi": "standby mode",
   "ji-ting-chu-fa": "Emergency stop trigger",
   "yao-kong-jia-shi-mo-shi": "Remote control driving mode",
-  "zi-dong-jia-shi-mo-shi": "Autopilot mode"
+  "zi-dong-jia-shi-mo-shi": "Autopilot mode",
+  "qu-niao": "Drive birds"
 }
