--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -361,5 +361,6 @@
   "dai-ji-mo-shi": "mode veille",
   "ji-ting-chu-fa": "Déclencheur d'arrêt d'urgence",
   "yao-kong-jia-shi-mo-shi": "Mode de conduite télécommandé",
-  "zi-dong-jia-shi-mo-shi": "Mode pilote automatique"
+  "zi-dong-jia-shi-mo-shi": "Mode pilote automatique",
+  "qu-niao": "Conduire les oiseaux"
 }
