--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -361,5 +361,7 @@
   "dai-ji-mo-shi": "mode veille",
   "ji-ting-chu-fa": "Déclencheur d'arrêt d'urgence",
   "yao-kong-jia-shi-mo-shi": "Mode de conduite télécommandé",
-  "zi-dong-jia-shi-mo-shi": "Mode pilote automatique"
+  "zi-dong-jia-shi-mo-shi": "Mode pilote automatique",
+  "dong-zuo-sao-miao": "analyse de mouvement",
+  "qiang-zhi-jie-shu": "Fin forcée"
 }
