--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -361,5 +361,7 @@
   "ji-ting-chu-fa": "急停触发",
   "dai-ji-mo-shi": "待机模式",
   "yao-kong-jia-shi-mo-shi": "遥控驾驶模式",
-  "che-liang-mo-shi-zhuang-tai": "车辆模式状态"
+  "che-liang-mo-shi-zhuang-tai": "车辆模式状态",
+  "qiang-zhi-jie-shu": "强制结束",
+  "dong-zuo-sao-miao": "动作扫描"
 }
