feat: 首页车速实时展示

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -368,5 +368,6 @@
   "jian-ting-yi-ti-ji-shu-ju-lian-jie-duan-kai": "监听一体机数据连接断开",
   "jian-ting-yi-ti-ji-shu-ju-lian-jie-cuo-wu": "监听一体机数据连接错误",
   "dang-qian-yin-le-zhuang-tai": "当前音乐状态",
-  "yin-le-lie-biao": "音乐列表"
+  "yin-le-lie-biao": "音乐列表",
+  "che-su": "车速"
 }
